# NoteAI

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_EN.md  SECURITY.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.locked.txt  requirements.txt  run.py  run_app.bat  start.sh  test_optimization.py  简介.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
NoteAI/: profile.md
agents_backup/: base.py  context_manager.py  multi_agent_framework.py  semantic_chunker.py
config/: __init__.py  app_config.py  config.json  config.json.example  constants.py  security.py  settings.py  workspace_state.py
docs/: API.md  DESIGN.md  PRD-notegen-integration.md  PRD.md  README.md  USAGE.md  rag-intent-router-analysis.md  schema.template.md
docs/design/: frontend-architecture.md  ui-framework-analysis.md
documents/prd/: PRD.md
mcp-server/: package-lock.json  package.json
mcp-server/src/: index.js  tools.js
modules/: __init__.py  abstract_generator.py  file_converter.py  file_preview.py  note_integration.py  topic_extractor.py  web_downloader.py
prompts/: __init__.py  abstract.py  agent.py  agent_prompts.py  ai_topic_consolidate.py  cascade.py  cloud_sync.py  file_conversion.py  intent_router.py  link_indexer.py  llm_rewrite.py  loader.py  note_compile.py  note_integration.py  profile.py  rag_assistant.py  schema_fallback.py  topic_assignment.py  topic_extraction.py  topic_survey.py  unified.py  web_download.py
prompts/yaml/: abstract.yaml  agent.yaml  ai_topic_consolidate.yaml  cascade.yaml  cloud_sync.yaml  file_conversion.yaml  intent_router.yaml  link_indexer.yaml  llm_rewrite.yaml  note_compile.yaml  note_integration.yaml  profile.yaml  rag_assistant.yaml  schema_fallback.yaml  topic_assignment.yaml  topic_extraction.yaml  topic_survey.yaml  unified.yaml  web_download.yaml
python/: main.py
python/sidecar/: __init__.py  agent_runner.py  archive_wiki.py  cascade.py  cascade_runner.py  classic_retriever.py  cli_agent_runner.py  compile_state.py  convert_failures.py  ingest_pipeline.py  intent_router.py  kb_health.py  kb_lint.py  mcp_config_manager.py  multi_source.py  (+15 more)
scripts/: apply_i18n.py  batch_topic.py  build-tiptap-bundle.mjs  build_i18n_html.py  bundle_sidecar_python.sh  dedupe_html_i18n.py  fix_broken_i18n.py  fix_file_locations.py  fix_nested_t.py  generate_i18n.py  i18n_build.py  migrate_topic_separator.py  remove_zhixuetang.py  rename_files_neutral.py  rename_organized.py  rename_remaining.py  reorganize_articles.py  reorganize_simple.py  retag_workspace.py  set_title_to_filename.py  set_topics_by_folder.py  sync_rpc_whitelist.py  sync_version.py  test_cli_integration.py  test_optimization.py  test_yaml_frontmatter.py  update_topics.py
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/.cargo/: config.toml
src-tauri/Notes/: 22 _ AI Agent 架构必读：OpenClaw 和 Claude Code，其实在解决同一个问题.md  AI Agent 架构设计（七）：Skills 系统设计（OpenClaw、Claude Code、Hermes Agent 对比）.md  AI Agent 架构设计（三）：任务规划与执行循环（OpenClaw、Claude Code、Hermes Agent 对比）.md  AI Agent 架构设计（九）：Agent 的自我欺骗（OpenClaw、Claude Code、Hermes Agent 对比）.md  AI Agent 架构设计（二）：工具系统设计（OpenClaw、Claude Code、Hermes Agent 对比）.md  AI Agent 架构设计（五）：安全与可控性设计（OpenClaw、Claude Code、Hermes Agent 对比）.md  AI Agent 架构设计（八）：Gateway 架构设计（OpenClaw、Claude Code、Hermes Agent 对比）.md  AI Agent 架构设计（六）：MCP vs CLI（OpenClaw、Claude Code、Hermes Agent 对比）.md  AI Agent 架构设计（十一）：目标漂移（OpenClaw、Claude Code、Hermes Agent 对比）.md  AI Agent 架构设计（四）：多 Agent 协作（OpenClaw、Claude Code、Hermes Agent 对比）.md  国产多 agent 平台介绍和横评.md  我用 TradingAgents 分析泡泡玛特：史上最强年报，为什么换来35%暴跌？.md  我用FinRobot分析美团：8个Agent联合作战，输出了一份机构级研报.md
src-tauri/Organized/: AI Agent 架构设计与本质.md  AI 产品经理职业发展路径.md  AI 学习路线图与资源.md  Agent 记忆系统与个性化构建.md
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  rpc.rs  sidecar.rs  state.rs
tests/: debug_tag_extractor.py  test_error_handler.py  test_helpers.py  test_optimization.py  test_rpc_router.py  test_ttl_cache.py  test_yaml_frontmatter.py  test_yaml_simple.py  workspace_rules_helpers.py
utils/: __init__.py  activity_log.py  component_state.py  deps_sync.py  error_codes.py  error_handler.py  fulltext_index.py  helpers.py  keyring_store.py  link_indexer.py  llm_utils.py  logger.py  note_compiler.py  package_manager.py  pdf_utils.py  tag_extractor.py  text_utils.py  topic_assigner.py  topic_classifier.py  topic_dedup.py  topic_file_ops.py  topic_manager.py  topic_pending.py  topic_wiki_manager.py  ttl_cache.py  wiki_crud.py  wiki_manager.py  wiki_sync.py  workspace_log.py
webui/: app.py  app_pyside6.py  index.html  test-modules.html
wiki/: AI 产品经理面试与简历指导.md  AI 测试优化与数据闭环.md  GUIDE.md
(+181 files in other folders)
