[package]
name = "noteai"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
which = "7"
uuid = { version = "1", features = ["v4"] }

[lib]
name = "noteai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
